Pause menu implemented

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -238,7 +238,7 @@ Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Va
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Ziplineactor_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 CableComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,CableComponent.Collision.Collision,
@@ -258,6 +258,8 @@ Timer_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_
 TriggerBox=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 TargetPoint=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
+Pause_Menu_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+PlayerController=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1738,6 +1740,47 @@ ob_course_joint_ca_3_C.Input=True
 ob_course_joint_ca_3_C.HLOD=True
 ob_course_joint_ca_3_C.WorldPartition=True
 ob_course_joint_ca_3_C.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Pause_Menu_Widget_C.Appearance=True
+Pause_Menu_Widget_C.Designer=True
+Pause_Menu_Widget_C.Input=True
+Pause_Menu_Widget_C.Interaction=True
+Pause_Menu_Widget_C.Performance=True
+Pause_Menu_Widget_C.Layout=True
+Pause_Menu_Widget_C.Behavior=True
+Pause_Menu_Widget_C.Render Transform=True
+Pause_Menu_Widget_C.Localization=True
+Pause_Menu_Widget_C.Accessibility=True
+Pause_Menu_Widget_C.Clipping=True
+Pause_Menu_Widget_C.Navigation=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2010,8 +2053,8 @@ StaticMeshSocket="\"Object\" "
 SplineMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 EdGraphNode_Comment="\"Object\" "
 SpringArmComponent="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
 HorizontalBox="\"Object\" "
 Timer_Widget_C="\"Object\" "
 ParticleSystem="\"Object\" "
@@ -2025,6 +2068,11 @@ ParticleModuleLifetime="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetim
 ParticleModuleLifetimeBase="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleColorOverLife="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+VerticalBox="\"Object\" "
+Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+ContentWidget="\"Object\" "
+Pause_Menu_Widget_C="\"Object\" "
+BackgroundBlur="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2973,7 +3021,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3225,26 +3273,26 @@ bConvertSceneUnit=False
 LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Zipline_Particles
-MRUItem1=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem2=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem6=/Game/Blueprints/Zipline_Interface
-MRUItem7=/Game/Blueprints/ziplineend7
-MRUItem8=/Game/Blueprints/Ziplineactor
-MRUItem9=/Game/Blueprints/Zipline_Actor
-MRUItem10=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem11=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem12=/Game/Blueprints/ziplineend6
-MRUItem13=/Game/Blueprints/Zipline_Interaction_BP
-MRUItem14=/Game/Blueprints/Zipline_BP
-MRUItem15=/Game/Blueprints/ziplineend2
-MRUItem16=/Game/Blueprints/ziplineend1
-MRUItem17=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem18=/Game/Blueprints/ziplineend_Cylinder
-MRUItem19=/Game/Blueprints/ziplineend_Cylinder_001
+MRUItem0=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem1=/Game/Blueprints/Zipline_Particles
+MRUItem2=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem3=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem7=/Game/Blueprints/Zipline_Interface
+MRUItem8=/Game/Blueprints/ziplineend7
+MRUItem9=/Game/Blueprints/Ziplineactor
+MRUItem10=/Game/Blueprints/Zipline_Actor
+MRUItem11=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem12=/Game/Blueprints/ZiplineInteract_BPI
+MRUItem13=/Game/Blueprints/ziplineend6
+MRUItem14=/Game/Blueprints/Zipline_Interaction_BP
+MRUItem15=/Game/Blueprints/Zipline_BP
+MRUItem16=/Game/Blueprints/ziplineend2
+MRUItem17=/Game/Blueprints/ziplineend1
+MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem19=/Game/Blueprints/ziplineend_Cylinder
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
