Pause menu and main menu implemented

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -260,6 +260,7 @@ TargetPoint=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Var
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 Pause_Menu_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 PlayerController=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+Main_Menu_WIdget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1781,13 +1782,56 @@ BackgroundBlur.Performance=True
 BackgroundBlur.Clipping=True
 BackgroundBlur.Navigation=True
 BackgroundBlur.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+mainmenumap_C.Tick=True
+mainmenumap_C.Replication=True
+mainmenumap_C.Actor=True
+mainmenumap_C.Input=True
+mainmenumap_C.HLOD=True
+mainmenumap_C.WorldPartition=True
+mainmenumap_C.Events=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.HLODSystem=True
+MenuGameMode_C.Tick=True
+MenuGameMode_C.Classes=True
+MenuGameMode_C.Game=True
+MenuGameMode_C.GameMode=True
+MenuGameMode_C.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Main_Menu_WIdget_C.Appearance=True
+Main_Menu_WIdget_C.Designer=True
+Main_Menu_WIdget_C.Input=True
+Main_Menu_WIdget_C.Interaction=True
+Main_Menu_WIdget_C.Performance=True
+Main_Menu_WIdget_C.Layout=True
+Main_Menu_WIdget_C.Behavior=True
+Main_Menu_WIdget_C.Render Transform=True
+Main_Menu_WIdget_C.Localization=True
+Main_Menu_WIdget_C.Accessibility=True
+Main_Menu_WIdget_C.Clipping=True
+Main_Menu_WIdget_C.Navigation=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Mainmenu/Main_Menu_WIdget.Main_Menu_WIdget
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
-OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Timer_Widget.Timer_Widget
-OpenAssetsAtExit=/Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3
+OpenAssetsAtExit=/Game/Blueprints/Mainmenu/MenuGameMode.MenuGameMode
+OpenAssetsAtExit=/Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1802,8 +1846,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ob_course_joint_ca.ob_course_joint_ca", ()),("/Game/ob_course_joint_ca_2.ob_course_joint_ca_2", ()),("/Game/ob_course_joint_ca_3.ob_course_joint_ca_3", ()),("/Game/ob_course_joint_ca_4.ob_course_joint_ca_4", ()))
 
 [RootWindow]
-ScreenPosition=X=547.000 Y=146.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=0.000 Y=59.000
+WindowSize=X=1018.000 Y=720.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1820,11 +1864,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
@@ -1901,12 +1945,12 @@ SoundBase="\"Object\" "
 EditorNotifyObject="\"Object\" "
 SphereComponent="\"Object\" "
 ProgressBar="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Health_Bar_Widget_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 BP_Enemy_AI_C="\"Object\" \"Object.CharacterMovement\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -2053,8 +2097,8 @@ StaticMeshSocket="\"Object\" "
 SplineMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 EdGraphNode_Comment="\"Object\" "
 SpringArmComponent="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" "
 Timer_Widget_C="\"Object\" "
 ParticleSystem="\"Object\" "
@@ -2068,11 +2112,13 @@ ParticleModuleLifetime="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetim
 ParticleModuleLifetimeBase="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleColorOverLife="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
-VerticalBox="\"Object\" "
-Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-ContentWidget="\"Object\" "
+VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Pause_Menu_Widget_C="\"Object\" "
 BackgroundBlur="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Main_Menu_WIdget_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2989,6 +3035,10 @@ SequencerWidgets.TimeStamp=2022.09.20-17.47.44
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.09.20-17.47.21
 ExternalImagePicker.LastCompileMethod=Unknown
+Cascade.TimeStamp=2022.09.20-17.47.04
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2022.09.20-17.47.14
+DistCurveEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2996,9 +3046,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 
 [MRU]
 MRUItem0=/Game/ob_course_joint_ca_3
-MRUItem1=/Game/ob_course_joint_ca_4
-MRUItem2=/Game/ob_course_joint_ca
-MRUItem3=/Game/ob_course_joint_ca_2
+MRUItem1=/Game/mainmenumap
+MRUItem2=/Game/ob_course_joint_ca_4
+MRUItem3=/Game/ob_course_joint_ca
+MRUItem4=/Game/ob_course_joint_ca_2
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -3021,7 +3072,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/PauseMenu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3270,29 +3321,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem1=/Game/Blueprints/Zipline_Particles
-MRUItem2=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem3=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem7=/Game/Blueprints/Zipline_Interface
-MRUItem8=/Game/Blueprints/ziplineend7
-MRUItem9=/Game/Blueprints/Ziplineactor
-MRUItem10=/Game/Blueprints/Zipline_Actor
-MRUItem11=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem12=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem13=/Game/Blueprints/ziplineend6
-MRUItem14=/Game/Blueprints/Zipline_Interaction_BP
-MRUItem15=/Game/Blueprints/Zipline_BP
-MRUItem16=/Game/Blueprints/ziplineend2
-MRUItem17=/Game/Blueprints/ziplineend1
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/Blueprints/ziplineend_Cylinder
+MRUItem1=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem3=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem4=/Game/Blueprints/Zipline_Particles
+MRUItem5=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem6=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem9=/Game/Blueprints/Zipline_Interface
+MRUItem10=/Game/Blueprints/ziplineend7
+MRUItem11=/Game/Blueprints/Ziplineactor
+MRUItem12=/Game/Blueprints/Zipline_Actor
+MRUItem13=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem14=/Game/Blueprints/ZiplineInteract_BPI
+MRUItem15=/Game/Blueprints/ziplineend6
+MRUItem16=/Game/Blueprints/Zipline_Interaction_BP
+MRUItem17=/Game/Blueprints/Zipline_BP
+MRUItem18=/Game/Blueprints/ziplineend2
+MRUItem19=/Game/Blueprints/ziplineend1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3360,6 +3411,10 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Blueprints/ziplineend7.ziplineend7=1
 /Game/Blueprints/Zipline_Interface.Zipline_Interface=1
 /Game/Blueprints/Zipline_Particles.Zipline_Particles=1
+/Game/ThirdPerson/Widgets/Timer_Widget.Timer_Widget=1
+/Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget=1
+/Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3=1
+/Game/mainmenumap.mainmenumap:PersistentLevel.mainmenumap=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
