Health pick up implemented

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -238,7 +238,7 @@ Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Va
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+SceneComponent=
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Ziplineactor_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 CableComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,CableComponent.Collision.Collision,
@@ -261,6 +261,7 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 Pause_Menu_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 PlayerController=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Main_Menu_WIdget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+HealthPickUp_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1825,13 +1826,24 @@ Main_Menu_WIdget_C.Localization=True
 Main_Menu_WIdget_C.Accessibility=True
 Main_Menu_WIdget_C.Clipping=True
 Main_Menu_WIdget_C.Navigation=True
+HealthPickUp_BP_C.Tick=True
+HealthPickUp_BP_C.Replication=True
+HealthPickUp_BP_C.Rendering=True
+HealthPickUp_BP_C.Collision=True
+HealthPickUp_BP_C.Actor=True
+HealthPickUp_BP_C.Input=True
+HealthPickUp_BP_C.HLOD=True
+HealthPickUp_BP_C.WorldPartition=True
+HealthPickUp_BP_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/Mainmenu/Main_Menu_WIdget.Main_Menu_WIdget
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Blueprints/Mainmenu/MenuGameMode.MenuGameMode
 OpenAssetsAtExit=/Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget
+OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1868,8 +1880,8 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+Object="\"Object\" "
+StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 SceneComponent="\"Object\" "
@@ -1943,7 +1955,7 @@ MediaSource="\"Object\" "
 SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 EditorNotifyObject="\"Object\" "
-SphereComponent="\"Object\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ProgressBar="\"Object\" "
 Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
@@ -3072,7 +3084,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/PauseMenu
+ContentBrowserDrawer.SelectedPaths=/Game/HealthPickUp
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3143,6 +3155,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP;
 RecentlyPlaced=/Game/Blueprints/ZiplineActor.ZiplineActor;
 RecentlyPlaced=/Game/Blueprints/Zipline_Actor.Zipline_Actor;
 RecentlyPlaced=/Game/Blueprints/ziplineend7.ziplineend7;
@@ -3162,7 +3175,6 @@ RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPo
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Game/Door_BP.Door_BP;
-RecentlyPlaced=/Game/spin_bp.spin_bp;
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3324,26 +3336,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem1=/Game/Blueprints/Mainmenu/MenuGameMode
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem3=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
-MRUItem4=/Game/Blueprints/Zipline_Particles
-MRUItem5=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem6=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem9=/Game/Blueprints/Zipline_Interface
-MRUItem10=/Game/Blueprints/ziplineend7
-MRUItem11=/Game/Blueprints/Ziplineactor
-MRUItem12=/Game/Blueprints/Zipline_Actor
-MRUItem13=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem14=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem15=/Game/Blueprints/ziplineend6
-MRUItem16=/Game/Blueprints/Zipline_Interaction_BP
-MRUItem17=/Game/Blueprints/Zipline_BP
-MRUItem18=/Game/Blueprints/ziplineend2
-MRUItem19=/Game/Blueprints/ziplineend1
+MRUItem0=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem3=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem5=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem6=/Game/Blueprints/Zipline_Particles
+MRUItem7=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem8=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem9=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem10=/Game/Blueprints/Zipline_Interface
+MRUItem11=/Game/Blueprints/ziplineend7
+MRUItem12=/Game/Blueprints/Ziplineactor
+MRUItem13=/Game/Blueprints/Zipline_Actor
+MRUItem14=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem15=/Game/Blueprints/ZiplineInteract_BPI
+MRUItem16=/Game/Blueprints/ziplineend6
+MRUItem17=/Game/Blueprints/Zipline_Interaction_BP
+MRUItem18=/Game/Blueprints/Zipline_BP
+MRUItem19=/Game/Blueprints/ziplineend2
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
