--- a/joint_SE_GA_CA/Config/DefaultEngine.ini
+++ b/joint_SE_GA_CA/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=joint_SE_GA_CA
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ob_course_joint_ca_3.ob_course_joint_ca_3
+GameDefaultMap=/Game/mainmenumap.mainmenumap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
