--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -238,7 +238,7 @@ Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Va
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Ziplineactor_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 CableComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,CableComponent.Collision.Collision,
@@ -1835,6 +1835,110 @@ HealthPickUp_BP_C.Input=True
 HealthPickUp_BP_C.HLOD=True
 HealthPickUp_BP_C.WorldPartition=True
 HealthPickUp_BP_C.Events=True
+TextureCube.LevelOfDetail=True
+TextureCube.Compression=True
+TextureCube.Texture=True
+TextureCube.Adjustments=True
+TextureCube.File Path=True
+TextureCube.Compositing=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSampleParameterCube.General=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpression=True
+MaterialExpressionTextureSampleParameterCube.ParameterCustomization=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameterCube.MaterialExpressionTextureBase=True
+MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
+MaterialExpressionReflectionVectorWS.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.WorldPartition=True
+DirectionalLight.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Actor=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.HLOD=True
+SpotLight.WorldPartition=True
+SpotLight.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1881,11 +1985,11 @@ Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 FbxImportUI="\"Object\" "
@@ -2131,6 +2235,18 @@ Pause_Menu_Widget_C="\"Object\" "
 BackgroundBlur="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 Main_Menu_WIdget_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
+TextureCube="\"Object\" "
+Texture="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionTextureSampleParameterCube="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionReflectionVectorWS="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -3084,7 +3200,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/HealthPickUp
+ContentBrowserDrawer.SelectedPaths=/Game/HDR
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3155,6 +3271,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/HDR/spinner1.spinner1;
+RecentlyPlaced=/Game/HDR/bounce.bounce;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Blueprints/Obstacles/sphere_model.sphere_model;
+RecentlyPlaced=/Game/Blueprints/Obstacles/spinner_Cube.spinner_Cube;
 RecentlyPlaced=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP;
 RecentlyPlaced=/Game/Blueprints/ZiplineActor.ZiplineActor;
 RecentlyPlaced=/Game/Blueprints/Zipline_Actor.Zipline_Actor;
@@ -3170,11 +3291,6 @@ RecentlyPlaced=/Game/Characters/Enemy/Test/Test_enemy.Test_enemy;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI;
-RecentlyPlaced=/Game/Characters/Player/Animations/neo10.neo10;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy.BP_Enemy;
-RecentlyPlaced=/Game/Door_BP.Door_BP;
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3220,6 +3336,7 @@ AnimSequence.Animation=True
 BoxComponent.Collision=True
 AnimMontage.Animation=True
 FbxImportUI.Animation=True
+ProjectPackagingSettings.Prerequisites=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3333,29 +3450,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HealthPickUp/HealthPickUp_BP
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem3=/Game/Blueprints/Mainmenu/MenuGameMode
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem5=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
-MRUItem6=/Game/Blueprints/Zipline_Particles
-MRUItem7=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem8=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem9=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem10=/Game/Blueprints/Zipline_Interface
-MRUItem11=/Game/Blueprints/ziplineend7
-MRUItem12=/Game/Blueprints/Ziplineactor
-MRUItem13=/Game/Blueprints/Zipline_Actor
-MRUItem14=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem15=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem16=/Game/Blueprints/ziplineend6
-MRUItem17=/Game/Blueprints/Zipline_Interaction_BP
-MRUItem18=/Game/Blueprints/Zipline_BP
-MRUItem19=/Game/Blueprints/ziplineend2
+MRUItem0=/Game/HDR/Space_Skybox
+MRUItem1=/Game/HDR/space_scape
+MRUItem2=/Game/Blueprints/Obstacles/sphere_model
+MRUItem3=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem6=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem8=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem9=/Game/Blueprints/Zipline_Particles
+MRUItem10=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem11=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem12=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem13=/Game/Blueprints/Zipline_Interface
+MRUItem14=/Game/Blueprints/ziplineend7
+MRUItem15=/Game/Blueprints/Ziplineactor
+MRUItem16=/Game/Blueprints/Zipline_Actor
+MRUItem17=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem18=/Game/Blueprints/ZiplineInteract_BPI
+MRUItem19=/Game/Blueprints/ziplineend6
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3427,6 +3544,7 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget=1
 /Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3=1
 /Game/mainmenumap.mainmenumap:PersistentLevel.mainmenumap=1
+/Game/HDR/space_scape.space_scape=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3511,6 +3629,8 @@ IOSRuntimeSettings=True
 NiagaraSettings=True
 NiagaraEditorSettings=True
 EditorStyleSettings=True
+CryptoKeysSettings=True
+GameplayTagsSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
